<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:padding="30dp">
    
	<TextView
	    android:id="@+id/categname"
	   	android:layout_width="100dp"
	   	android:layout_height="wrap_content"
	   	android:text="@string/categoryname"
	    />
	<TextView 
	    android:id="@+id/category"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:textStyle="bold"
	    android:layout_toRightOf="@id/categname"
	    android:text="Category name"/>
	
	<TextView
	    android:id="@+id/setregion"
	    android:layout_width="100dp"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/categname"
	    android:paddingTop="17dp"
	    android:text="@string/setregion" />
	
	<Button
	    android:id="@+id/region"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/region"
	    android:layout_toRightOf="@id/setregion"
	    android:layout_below="@id/category"
	    />
	
    
    
</RelativeLayout>
