<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout android:layout_width="match_parent" 
                  android:id="@+id/linearLayout1"  
                  android:gravity="center"
                  android:layout_height="50dp">
        
        <ImageView
            android:id="@+id/logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="left"
            android:src="@drawable/logo" />
        <ImageView
            android:id="@+id/directory"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_gravity="left"
            android:src="@drawable/directory" />
        
        <View android:layout_height="wrap_content" 
              android:id="@+id/view1"
              android:layout_width="wrap_content"
              android:layout_weight="1" />
        
        <Button android:id="@+id/categorybutton"
                android:background="@drawable/button"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:layout_width="120dp"/>
    </LinearLayout>
    <RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="50dp">
	    <TextView
	        android:id="@+id/label"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/label"/>
	    <EditText
	        android:id="@+id/entry"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/label"/>
	  </RelativeLayout>
	    <LinearLayout 
	        android:layout_height="50dp"
	        android:layout_width="match_parent"
	        android:layout_gravity="right"
	        android:orientation="horizontal">
	        
	     <Button
	        android:layout_gravity="right"
	        android:id="@+id/okbutton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginLeft="10dp"
	        android:text="@string/okbutton" />
	     <Button
	        android:layout_gravity="right"
	        android:id="@+id/cancelbutton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/cancelbutton" />	
	        
	    </LinearLayout>
	    

    <fragment android:id="@+id/headlines1" 
              android:layout_height="fill_parent"
              android:name="com.example.multiscreenui.MultiScreen1Fragment"
              android:layout_width="match_parent" />

</LinearLayout>